# rom-scanner

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  rom_scanner.py  rom_scanner.spec
.github/workflows/: ci.yml
config/sandboxie/: RomQuarantine.ini
docs/: production-deployment.md  sandboxie-setup.md
parsers/: __init__.py  nsp_parser.py  xci_parser.py
scanner/: __init__.py  av_scanner.py  config.py  db.py  hash_scanner.py  homebrew_db.json  logging_config.py  manifest.py  pipeline.py  recovery.py  sandbox.py  storage.py  threat_db.json  threat_feed.py  watch.py
scripts/: build-installer.ps1  install.ps1
tests/: conftest.py  test_av_scanner.py  test_db.py  test_hash_scanner.py  test_integration.py  test_manifest.py  test_notifier.py  test_nsp_parser.py  test_recovery.py  test_sandbox.py  test_storage.py  test_threat_feed.py  test_watch.py  test_xci_parser.py
tests/fixtures/: README.md
tray/: __init__.py  app.py  notifier.py
